[#17] test: object not null 처리